[package]
name = "bips-dev"
version = "0.1.0"
authors = ["ngmiller <nick@ngmiller.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_wiki_text = "0.1.5"
tera = "1"
serde = { version = "1", features = ["derive"] }
